--- a/.github/workflows/lint_spec.yml
+++ b/.github/workflows/lint_spec.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Lint spec
         uses: mhiew/redoc-lint-github-action@v3
         with:
-          args: 'openapi.yaml'
+          args: 'spec/faro.yaml'
