add geo schema, add name-normalizer to go config, add more x-go-type-skip-optional-pointer

--- a/configs/go-config.yaml
+++ b/configs/go-config.yaml
@@ -6,3 +6,4 @@ compatibility:
   always-prefix-enum-values: true
 output-options:
   skip-prune: true
+  name-normalizer: ToCamelCaseWithInitialisms
