--- a/spec/components/schemas/log.yaml
+++ b/spec/components/schemas/log.yaml
@@ -8,8 +8,10 @@ components:
       properties:
         context:
           $ref: '#/components/schemas/LogContext'
+          x-go-type-skip-optional-pointer: true
         level:
           $ref: '#/components/schemas/LogLevel'
+          x-go-type-skip-optional-pointer: true
           x-go-name: LogLevel
         message:
           type: string
