--- a/spec/gen/faro.gen.yaml
+++ b/spec/gen/faro.gen.yaml
@@ -66,7 +66,6 @@ components:
         id:
           type: string
           x-go-type-skip-optional-pointer: true
-          x-go-name: ID
         attributes:
           type: object
           additionalProperties:
@@ -90,7 +89,6 @@ components:
         bundleId:
           type: string
           x-go-type-skip-optional-pointer: true
-          x-go-name: BundleID
         environment:
           type: string
           x-go-type-skip-optional-pointer: true
@@ -211,8 +209,10 @@ components:
       properties:
         context:
           $ref: '#/components/schemas/LogContext'
+          x-go-type-skip-optional-pointer: true
         level:
           $ref: '#/components/schemas/LogLevel'
+          x-go-type-skip-optional-pointer: true
           x-go-name: LogLevel
         message:
           type: string
@@ -249,6 +249,7 @@ components:
         module:
           type: string
           x-go-type-skip-optional-pointer: true
+      x-go-type-skip-optional-pointer: true
     ExceptionContext:
       type: object
       additionalProperties:
@@ -264,7 +265,6 @@ components:
         - warning
         - error
       x-go-type-skip-optional-pointer: true
-      x-go-name: LogLevel
     User:
       type: object
       description: holds metadata about the user related to an app event.
@@ -275,7 +275,6 @@ components:
         id:
           type: string
           x-go-type-skip-optional-pointer: true
-          x-go-name: ID
         email:
           type: string
           x-go-type-skip-optional-pointer: true
@@ -295,12 +294,10 @@ components:
       properties:
         span_id:
           type: string
-          x-go-name: SpanID
           x-go-type-skip-optional-pointer: true
           x-omitempty: false
         trace_id:
           type: string
-          x-go-name: TraceID
           x-go-type-skip-optional-pointer: true
           x-omitempty: false
       x-go-type-skip-optional-pointer: true
@@ -316,11 +313,9 @@ components:
         id:
           type: string
           x-go-type-skip-optional-pointer: true
-          x-go-name: ID
         url:
           type: string
           x-go-type-skip-optional-pointer: true
-          x-go-name: URL
       x-go-type-skip-optional-pointer: true
     Browser:
       type: object
@@ -335,6 +330,7 @@ components:
         os:
           type: string
           x-go-type-skip-optional-pointer: true
+          x-go-name: OS
         mobile:
           type: boolean
           x-go-type-skip-optional-pointer: true
@@ -356,7 +352,6 @@ components:
       properties:
         sdk:
           $ref: '#/components/schemas/SDK'
-          x-go-name: SDK
         app:
           $ref: '#/components/schemas/App'
         user:
@@ -371,6 +366,8 @@ components:
           $ref: '#/components/schemas/K6'
         view:
           $ref: '#/components/schemas/View'
+        geo:
+          $ref: '#/components/schemas/Geo'
       x-go-type-skip-optional-pointer: true
     Exception:
       description: holds all the data regarding an exception.
@@ -380,6 +377,7 @@ components:
       properties:
         context:
           $ref: '#/components/schemas/ExceptionContext'
+          x-go-type-skip-optional-pointer: true
         stacktrace:
           $ref: '#/components/schemas/Stacktrace'
         timestamp:
@@ -431,8 +429,40 @@ components:
         meta:
           $ref: '#/components/schemas/Meta'
           free-form: true
+          x-go-type-skip-optional-pointer: true
         traces:
           $ref: '#/components/schemas/Traces'
+    Geo:
+      type: object
+      description: holds metadata about a client's geo.
+      properties:
+        continent_iso:
+          type: string
+          x-go-type-skip-optional-pointer: true
+          x-go-name: ContinentISOCode
+        continent:
+          type: string
+          x-go-type-skip-optional-pointer: true
+        country_iso:
+          type: string
+          x-go-type-skip-optional-pointer: true
+          x-go-name: CountryISOCode
+        country:
+          type: string
+          x-go-type-skip-optional-pointer: true
+        province:
+          type: string
+          x-go-type-skip-optional-pointer: true
+        city:
+          type: string
+          x-go-type-skip-optional-pointer: true
+        connection_type:
+          type: string
+          x-go-type-skip-optional-pointer: true
+        carrier:
+          type: string
+          x-go-type-skip-optional-pointer: true
+      x-go-type-skip-optional-pointer: true
     Traces:
       description: otel traces model.
       x-go-type: ptrace.Traces
