cleanup makefile and build/go directory

--- a/spec/components/schemas/traces.yaml
+++ b/spec/components/schemas/traces.yaml
@@ -1,6 +1,7 @@
 components:
   schemas:
     Traces:
+      type: object
       description: otel traces model.
       x-go-type: "ptrace.Traces"
       x-go-type-import:
