--- a/spec/gen/faro.gen.yaml
+++ b/spec/gen/faro.gen.yaml
@@ -478,19 +478,14 @@ components:
           type: string
           x-go-type-skip-optional-pointer: true
           x-go-name: ContinentISOCode
-        continent:
-          type: string
-          x-go-type-skip-optional-pointer: true
         country_iso:
           type: string
           x-go-type-skip-optional-pointer: true
           x-go-name: CountryISOCode
-        country:
+        subdivision_iso:
           type: string
           x-go-type-skip-optional-pointer: true
-        province:
-          type: string
-          x-go-type-skip-optional-pointer: true
+          x-go-name: SubdivisionISO
         city:
           type: string
           x-go-type-skip-optional-pointer: true
