chore(session.yml): add "overrides" property

--- a/spec/components/schemas/session.yaml
+++ b/spec/components/schemas/session.yaml
@@ -12,4 +12,9 @@ components:
           additionalProperties:
             type: string
           x-go-type-skip-optional-pointer: true
+        overrides:
+          type: object
+          additionalProperties:
+            type: string
+          x-go-type-skip-optional-pointer: true
       x-go-type-skip-optional-pointer: true
