--- a/spec/gen/faro.gen.yaml
+++ b/spec/gen/faro.gen.yaml
@@ -71,6 +71,11 @@ components:
           additionalProperties:
             type: string
           x-go-type-skip-optional-pointer: true
+        overrides:
+          type: object
+          additionalProperties:
+            type: string
+          x-go-type-skip-optional-pointer: true
       x-go-type-skip-optional-pointer: true
     Stacktrace:
       type: object
