chore: add fix serviceName property to session.overrides

--- a/spec/components/schemas/session.yaml
+++ b/spec/components/schemas/session.yaml
@@ -14,6 +14,9 @@ components:
           x-go-type-skip-optional-pointer: true
         overrides:
           type: object
+          serviceName:
+            type: string
+            x-go-type-skip-optional-pointer: true
           additionalProperties:
             type: string
           x-go-type-skip-optional-pointer: true
