promote Overrides schema and build-go

--- a/spec/components/schemas/session.yaml
+++ b/spec/components/schemas/session.yaml
@@ -13,11 +13,5 @@ components:
             type: string
           x-go-type-skip-optional-pointer: true
         overrides:
-          type: object
-          serviceName:
-            type: string
-            x-go-type-skip-optional-pointer: true
-          additionalProperties:
-            type: string
-          x-go-type-skip-optional-pointer: true
+          $ref: '#/components/schemas/Overrides'
       x-go-type-skip-optional-pointer: true
