feat(meta): Add `geoLocationTrackingEnabled` override
Follow-up of https://github.com/grafana/faro-web-sdk/pull/960

--- a/spec/gen/faro.gen.yaml
+++ b/spec/gen/faro.gen.yaml
@@ -217,6 +217,9 @@ components:
         serviceName:
           type: string
           x-go-type-skip-optional-pointer: true
+        geoLocationTrackingEnabled:
+          type: boolean
+          x-go-type-skip-optional-pointer: true
       x-go-type-skip-optional-pointer: true
     View:
       type: object
