--- a/spec/components/schemas/overrides.yaml
+++ b/spec/components/schemas/overrides.yaml
@@ -7,4 +7,7 @@ components:
         serviceName:
             type: string
             x-go-type-skip-optional-pointer: true
+        geoLocationTrackingEnabled:
+            type: boolean
+            x-go-type-skip-optional-pointer: true
       x-go-type-skip-optional-pointer: true
