--- a/spec/components/schemas/exception.yaml
+++ b/spec/components/schemas/exception.yaml
@@ -7,15 +7,15 @@ components:
         - timestamp
       properties:
         context:
-          $ref: '#/components/schemas/ExceptionContext'
+          $ref: "#/components/schemas/ExceptionContext"
           x-go-type-skip-optional-pointer: true
         stacktrace:
-          $ref: '#/components/schemas/Stacktrace'
+          $ref: "#/components/schemas/Stacktrace"
         timestamp:
           type: string
           format: date-time
         trace:
-          $ref: '#/components/schemas/TraceContext'
+          $ref: "#/components/schemas/TraceContext"
           x-go-type-skip-optional-pointer: true
         type:
           type: string
@@ -23,3 +23,6 @@ components:
         value:
           type: string
           x-go-type-skip-optional-pointer: true
+        action:
+          $ref: "#/components/schemas/Action"
+      x-go-type-skip-optional-pointer: true
