--- a/spec/components/schemas/log.yaml
+++ b/spec/components/schemas/log.yaml
@@ -7,10 +7,10 @@ components:
         - timestamp
       properties:
         context:
-          $ref: '#/components/schemas/LogContext'
+          $ref: "#/components/schemas/LogContext"
           x-go-type-skip-optional-pointer: true
         level:
-          $ref: '#/components/schemas/LogLevel'
+          $ref: "#/components/schemas/LogLevel"
           x-go-type-skip-optional-pointer: true
           x-go-name: LogLevel
         message:
@@ -20,4 +20,7 @@ components:
           type: string
           format: date-time
         trace:
-          $ref: '#/components/schemas/TraceContext'
+          $ref: "#/components/schemas/TraceContext"
+        action:
+          $ref: "#/components/schemas/Action"
+      x-go-type-skip-optional-pointer: true
