feat(model): add error fingerprint
This field is used for user defined fingerprinting to make grouping more
predictable

--- a/spec/components/schemas/exception.yaml
+++ b/spec/components/schemas/exception.yaml
@@ -20,6 +20,9 @@ components:
         type:
           type: string
           x-go-type-skip-optional-pointer: true
+        fingerprint:
+          type: string
+          x-go-type-skip-optional-pointer: true
         value:
           type: string
           x-go-type-skip-optional-pointer: true
